# wallet-transfer-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: actions.py  config.py  decode_auth_header.py  exception.py  fees.py  handlers.py  main.py  rates_mock.py  route.py  schemas.py  user_to_object.py
src/app/db_manager/: db_connection.py  redis_tools.py  tables.py  wallet_transfer_db_manager.py  wallet_transfer_db_manager_abstarct.py
src/app/db_manager/migrations/: auto_migrate.py
src/app/db_manager/migrations/core/: env.py
src/app/db_manager/migrations/core/versions/: 1fd6ac67a759_.py  8d4a211c8690_.py
src/app/db_manager/rabbit/: consumer.py  producer.py  rabbit_connection.py
src/app/domain/: sms_confirmation.py  user.py
